--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </video>
 
 <h1>A pure flow, a river that flows from the throne of God</h1>
-<img src="./img/Exp Fire.png" alt="Fire" style="width: 50vw; height:50vh; border:none">
+<img src="./img/EXP FIRE.png" alt="Fire" style="width: 50vw; height:50vh; border:none">
 <h1>Get ready to press in and press the ignition button</h1>
     </div>
 
