--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1>Experience the Fire of God</h1>
 <video width="100%" height="100%" preload="metadata" controls="" autoplay loop>
   <source src="./img/Fire Of God.mp4">
-  <a href="./img/Fire Of God.mp4">your_video_url.mp4</a>
+  <a href="./img/Fire Of God.mp4">./img/Fire Of God.mp4</a>
 </video>
 
 <h1>A pure flow, a river that flows from the throne of God</h1>
