--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
 <h1>Receive a touch from heaven</h1>
 <img src="./img/1.png" alt="Fire" style="width: 50vw; height:50vh;">
 <h1>Experience the Fire of God</h1>
-<video width="100%" height="100%" preload="metadata" controls=""  autoplay loop>
-  <source src="./img/Fire Of God.mp4">
-  <a href="./img/Fire Of God.mp4">./img/Fire Of God.mp4</a>
-</video>
+<img src="./img/Fire Of God (1).gif" alt="Fire">
 
 <h1>A pure flow, a river that flows from the throne of God</h1>
 <img src="./img/EXP FIRE.png" alt="Fire" style="width: 50vw; height:50vh; border:none">
